modified in dev branch

--- a/hello.html
+++ b/hello.html
@@ -1,8 +1,7 @@
-<html>
-<head>
-    <title>Hello Project</title>
 </head>
+<title>Hello Project</title>
 <body>
     <div>This is Project</div>
+    <h1>this is from dev branch</h1>
 </body>
 </html>
